--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@ h2{
 }
 
 
+ul{
+	margin:0;
+	padding:0;
+}
+
+li{
+	list-style-type:none;	
+		margin:0;
+	padding:10px 0;
+}
+
 table{
 	margin:0 auto;
 	border-collapse: collapse;
