--- a/css/style.css
+++ b/css/style.css
@@ -104,9 +104,15 @@ p{
 
 /* Barre de navigation */
 nav{
-	padding:5px 10px;
+	padding:2px 10px;
 	background-color:white;
 	color:#202020;
+	font-family: 'Cutive Mono', monospace;
+	position:fixed;
+	top:0px;
+	width:100%; 
+	z-index:9999;
+	display: none;
 }
 
 nav ul{
@@ -171,6 +177,7 @@ blockquote{
 	position:relative;
 	line-height: 2rem;
 	margin:0 20%;
+	font-family: 'Cutive Mono', monospace;
 }
 
 blockquote::before{
@@ -214,6 +221,25 @@ blockquote ~ div{
 .parallax-window {
     min-height: 80vh;
 }
+/* background fixes*/
+.fond-fixe{
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+	min-height: 100vh;
+	display:flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.titre-fond{
+	letter-spacing: 1.2rem;
+	font-weight:800;
+	color:white;
+	opacity:0.7;
+	word-break: break-all;
+}
 
 /* Section competences */
 #competences .conteneur-flex{
@@ -245,6 +271,7 @@ blockquote ~ div{
 #competences td{
 	vertical-align:middle;
 	padding:10px 0;
+	font-family: 'Cutive Mono', monospace;
 }
 
 .matiere{
@@ -343,12 +370,14 @@ blockquote ~ div{
 	max-width:360px;
 	width:100%;
 	margin:5px;
+	border-radius:50%;
 }
 
 .thumbnail {
 	position: relative;
 	width: 100%;
 	cursor: pointer;
+
 }
 
 .dessus {
@@ -399,8 +428,9 @@ blockquote ~ div{
 /* Modal Content */
 .modal-content {
 	position: relative;
-	background-color: #fefefe;
-	margin: 0 auto;
+	background-color: #fefefe;	
+	margin: auto;
+	margin-top:40px;
 	width: 50%;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 	-webkit-animation-name: animatetop;
@@ -436,6 +466,7 @@ blockquote ~ div{
 	display:flex;
 	flex-direction: column;
 	overflow: auto;
+	font-family: 'Cutive Mono', monospace;
 }
 
 .modal-body p{
@@ -477,6 +508,10 @@ blockquote ~ div{
 	position:relative;
 }
 
+#contact .fond-fixe{
+	position:relative;
+}
+
 .btn-contact{
 	font-size:2rem;
 	color:white;
@@ -485,6 +520,7 @@ blockquote ~ div{
 	top: 80%;
 	transform: translate(-50%, -80%);
 	border:2px solid;
+	border-radius: 100px;
 	padding:10px;
 	opacity:0.7;
 }
@@ -497,6 +533,7 @@ blockquote ~ div{
 footer{
 	text-align:center;
 	padding:10px;
+	font-family: 'Cutive Mono', monospace;
 }
 
 .symbole{
@@ -505,3 +542,11 @@ footer{
 }
 
 
+/* Animations test */
+.ml16 {
+	overflow: hidden;
+  }
+  
+  .ml16 .letter {
+	display: inline-block;
+  }
