--- a/css/responsive.css
+++ b/css/responsive.css
@@ -112,6 +112,10 @@
     .modal-content{
         width: 100%;
     }
+
+    .wrapper-thumbnail{
+        margin-bottom:10px;
+    }
 }
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
