--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ blockquote{
 	position:relative;
 	line-height: 2rem;
 	margin:0 20%;
+	margin-bottom:60px;
 	font-family: 'Cutive Mono', monospace;
 }
 
@@ -205,7 +206,6 @@ blockquote::after{
 }
 
 blockquote ~ div{
-	margin-top:50px;
 	text-align: center;
 }
 
@@ -240,6 +240,24 @@ blockquote ~ div{
 	opacity:0.7;
 	word-break: break-all;
 }
+/* Section Presentation */
+.bounce {
+	-moz-animation: bounce 2s infinite;
+	-webkit-animation: bounce 2s infinite;
+	animation: bounce 2s infinite;
+  }
+  
+  @keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {
+	  transform: translateY(0);
+	}
+	40% {
+	  transform: translateY(-30px);
+	}
+	60% {
+	  transform: translateY(-15px);
+	}
+  }
 
 /* Section competences */
 #competences .conteneur-flex{
