--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,9 +7,11 @@
 @media (min-width: 576px) {
     h1{
         font-size:3rem;
+        letter-spacing: 0.3rem;
     }
     h2{
         font-size:2rem;
+        letter-spacing: 0.3rem;
     }
     .modal-content{
         width: 80%;
@@ -34,13 +36,13 @@
 @media (min-width: 992px) {
     h1{
         font-size:4rem;
+        letter-spacing: 0.5rem;
     }
 
     h2{
         font-size:3rem;
+        letter-spacing: 0.5rem;
     }
-
-
 
     .titre-fond{
         font-size:7rem;
@@ -99,9 +101,11 @@
 @media (max-width: 575.98px) {
     h1{
         font-size:2rem;
+        letter-spacing: 0.1rem;
     }
     h2{
         font-size:1.7rem;
+        letter-spacing: 0.1rem;
     }
     h3{
         font-size:1.9rem;
@@ -116,6 +120,11 @@
     .wrapper-thumbnail{
         margin-bottom:10px;
     }
+
+    .bounce{
+        margin-top:20px;
+    }
+
 }
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
@@ -145,6 +154,17 @@
 }
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
+    #competences .wrapper-tab::before{
+        background-image: url('../images/tap.png');
+        background-size: 70px 70px;
+        position:absolute;
+        right: 100px;
+        top:60px;
+        width: 70px; 
+        height: 70px;
+        content:"";
+        opacity:0.05;
+    }
 
 }
 /* Large devices (desktops, less than 1200px) */
